# lab

database/postgresql/: docker-compose.yml
database/surrealdb/: README.md  docker-compose.yml  info.sh  query.sh
database/surrealdb/ql/: create_account.ql  create_article.ql  info.ql  select.ql
deno/server/: README.md  index.ts
golang/echo-example/: .env.example  README.md  app.go  docker-compose.yml  go.mod  go.sum  server.go
golang/echo-example/entity/: user.go
golang/echo-example/usecase/: user_interactor.go
golang/game-of-life/: main.go
golang/oauth-example/: go.mod  go.sum  main.go
haskel/: README.md
haskel/programing_haskell/: 2.7.hs  3.11.hs
kotlin/ktor-sample/: .gitignore  Dockerfile  build.gradle.kts  docker-compose.yml  gradle.properties
machine-learning/example/: .gitignore  ai_book1.py  ai_book3.py  ai_book3_resnet.py  ai_book3_resnet_evaluate.py
machine-learning/example/ai_book4_bandit/: algos.py  main.py  slotarm.py
machine-learning/example/ai_book4_cartpole/: main.py
machine-learning/example/ai_book4_maze/: main.py  maze.py  sarsa_q.py
machine-learning/example/ai_book5_three/: main.py
machine-learning/example/ai_book6_alpha/: dual_network.py  evaluate_best_player.py  evaluate_network.py  game.py  pv_mcts.py  self_play.py  train_network.py
machine-learning/example/ai_book7/: dual_network.py  human_play.py  main.py  test.py
machine-learning/example/ai_book8_connect4/: dual_network.py  game.py  human_play.py  self_play.py
machine-learning/example/ai_book8_reversi/: dual_network.py  game.py  human_play.py  train_cycle.py
machine-learning/example/ai_book8_shogi/: dual_network.py  game.py  human_play.py  pv_mcts.py  self_play.py
python/camera/: camera.py
python/corpus/: main.py  pyproject.toml
python/corpus/tests/: test_corpus.py
remix/stack-example/: README.md  fly.toml  package-lock.json  package.json
remix/stack-example/remix.init/: package-lock.json
rust/algorithm/gcd/: Cargo.toml
rust/algorithm/sorting/bubble_sort/: Cargo.toml  README.md
rust/algorithm/sorting/bubble_sort/benches/: benchmark.rs
rust/algorithm/sorting/bubble_sort/src/: lib.rs  main.rs
rust/algorithm/sorting/merge_sort/: Cargo.toml
rust/algorithm/sorting/merge_sort/benches/: benchmark.rs
rust/algorithm/sorting/merge_sort/src/: lib.rs  main.rs
rust/command_line/cookbook/: Cargo.toml
rust/command_line/grrs/: Cargo.toml
rust/command_line/grrs/src/: main.rs
rust/command_line/grrs/tests/: cli.rs
rust/compression/tarball/: .gitignore  Cargo.toml
rust/concurrency/parallel_tasks/: Cargo.toml
rust/concurrency/threads/: Cargo.toml
rust/concurrency/threads/src/: draw_fractal.rs  files_concurrently.rs  main.rs  mutable_state.rs  parallel_pipeline.rs
rust/cryptography/hashing/: Cargo.toml
rust/data_structure/bitfield/: Cargo.toml
rust/database/postgres/: Cargo.toml  before_aggregate.sql  docker-compose.yml
rust/database/sqlite/: Cargo.toml
rust/date_and_time/duration_and_calculation/: Cargo.toml
rust/date_and_time/log_message/: Cargo.toml
rust/date_and_time/parsing_and_displaying/: Cargo.toml
rust/development_tool/build_time_tooling/: Cargo.toml  build.rs
rust/development_tool/configure_logging/: Cargo.toml
rust/development_tool/versioning/: Cargo.toml
rust/encoding/character_sets/: Cargo.toml
rust/encoding/csv_processing/: Cargo.toml
rust/encoding/structured_data/: Cargo.toml
rust/error_handling/: Cargo.toml
rust/error_handling/aliases_for_result/: Cargo.toml
rust/error_handling/boxing_errors/: Cargo.toml
rust/error_handling/combinators_and_then/: Cargo.toml
rust/error_handling/defining_type/: Cargo.toml
rust/error_handling/introduciong/: Cargo.toml
rust/error_handling/iterating_over_results/: Cargo.toml
rust/error_handling/map_for_result/: Cargo.toml
rust/error_handling/pulling_results_out/: Cargo.toml
rust/error_handling/src/: avoid_discarding_errors.rs  error_scenarios.rs  main.rs
rust/error_handling/unpacking_options/: Cargo.toml
rust/error_handling/wrapping_errors/: Cargo.toml
rust/file_system/: Cargo.toml  lines.txt
rust/file_system/src/: avoid_writing_and_reading.rs  calculate_file_sizes.rs  file_modified.rs  main.rs  (+8 more)
rust/operating_system/: Cargo.toml
rust/operating_system/blog_os/: Cargo.toml
rust/operating_system/blog_os/.cargo/: config.toml
rust/operating_system/blog_os/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
rust/operating_system/blog_os/tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
rust/rustrover/: Cargo.toml
rust/science/mathematics/linear_algebra/: Cargo.toml
rust/science/mathematics/linear_algebra/src/: adding_matrices.rs  deserialize_matrix.rs  invert_matrix.rs  main.rs  multiplying_matrices.rs  vector_comparison.rs
rust/web/axum_jwt/: Cargo.toml
rust/web/axum_jwt/src/: claim.rs  error.rs  key.rs  main.rs
rust/web/axum_tutorial/generate-random-number/: Cargo.toml
rust/web/axum_tutorial/generate-random-number/src/: main.rs
rust/web/axum_tutorial/print-request-response/: Cargo.toml
rust/web/axum_tutorial/print-request-response/src/: main.rs
rust/web/clients/calling_api/: Cargo.toml
rust/web/clients/calling_api/src/: gist.rs  main.rs  query_api.rs  restful_api.rs
rust/web/clients/downloads/: Cargo.toml
rust/web/clients/downloads/src/: download_temporary.rs  main.rs  partial_download.rs  post_file.rs
rust/web/extracting_links/: Cargo.toml
rust/web/extracting_links/src/: broken_links.rs  extract_from_html.rs  extract_from_mediawiki.rs  main.rs
solid/my-app/: package.json  pnpm-lock.yaml
svelte/hello/: package-lock.json  package.json  tsconfig.json  vite.config.js
ts/common/: README.md  tsconfig.json
ts/server/: README.md  app.ts  docker-compose.yml  package-lock.json  package.json  tsconfig.json
(+298 files in other folders)
