[tool.poetry]
name = "corpus"
version = "0.1.0"
description = ""
authors = ["Takayuki Sato <s.yukkiy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
