[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[test]]
name = "should_panic"
harness = false

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300

[dependencies]
bootloader = "0.9.22"
volatile = "0.4.4"
spin = "0.9.2"
lazy_static = { version="1.4.0", features=["spin_no_std"] }
x86_64 = "0.14.8"
uart_16550 = "0.2.16"
