[package]
name = "extracting_links"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
select = "0.6.0-alpha.1"
tokio = { version="1.15.0", features =["macros", "rt-multi-thread"] }
reqwest = "0.11.7"
url = "2.2.2"
lazy_static = "1.4.0"
regex = "1.5.4"
