[package]
name = "bubble_sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bslib"
path = "src/lib.rs"

[dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false
