[package]
name = "linear_algebra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.4", features = ["approx"] }
approx = "0.4.0"
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
serde = "1.0.132"
serde_json = "1.0.73"