[package]
name = "print-request-response"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.1"
hyper = "0.14.18"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4.12", features = ["util", "filter"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.10", features = ["env-filter"] }
