[package]
name = "downloads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
tempfile = "3.2.0"
reqwest = "0.11.7"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
